Contents link overlap and print styles fixes
* Contents link overlap fixed with some z-indexing, background and box shadow on contents list, so contents link disappears behind
* Print view fixed following layout changes, print styles updated and hidden crown copyright text moved out of header and below contents list to maintain original print layout
* Restoring grey colour to some heading numbers in content
* Right to left content layout fixed following previous changes

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -1,5 +1,3 @@
 // PRINT STYLESHEET COMPILER
 
-.print-wrapper {
-  @import "print/html-publication";
-}
+@import "print/html-publication";
