--- a/app/assets/stylesheets/views/_html-publication.scss
+++ b/app/assets/stylesheets/views/_html-publication.scss
@@ -3,6 +3,11 @@
 .html-publication {
   @include sidebar-with-body;
 
+  .direction-rtl & {
+    direction: rtl;
+    text-align: start;
+  }
+
   .publication-external {
     @extend %grid-row;
     margin-bottom: $gutter-two-thirds;
@@ -16,21 +21,19 @@
         padding-bottom: $gutter-one-third;
       }
     }
+
+    .direction-rtl & {
+      direction: ltr;
+    }
   }
 
   .publication-header {
     @include white-links;
     @include core-19;
     color: $white;
-
     background: $light-blue;
     padding: $gutter;
-    margin-bottom: $gutter;
-
-    &.direction-rtl {
-      direction: rtl;
-      text-align: start;
-    }
+    margin-bottom: $gutter * 2;
   }
 
   .headings {
@@ -52,85 +55,84 @@
     }
   }
 
-  .html-publication-grid-row {
-    @extend %grid-row;
-    //margin: 0 0 45px 0;
+  .offset-one-quarter {
+    margin-left: 25%;
 
-    .column-sidebar {
-      @include grid-column(1 / 4, desktop);
+    .direction-rtl & {
+      margin-left: 0;
+      margin-right: 25%;
     }
-
-    .column-content {
-      @include grid-column(3 / 4, desktop);
-    }
-
-    .offset-one-quarter {
-      margin-left: 25%;
-    }
-
-    @include media(false, $desktop-breakpoint) {
-      .govuk-sticky-element--enabled {
-        position: static;
-      }
-
-      .offset-one-quarter {
-        margin-left: 0;
-      }
-    }
-  }
-
-  .contents-list {
-    padding-bottom: $gutter;
-    list-style: none;
-
-    li {
-      padding-top: $gutter / 4;
-      line-height: 1.3;
-
-      @media print {
-        display: none;
-        list-style: none;
-      }
-    }
-
-    a {
-      text-decoration: none;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
-    .contents-number {
-      float: left;
-    }
-
-    .contents-text {
-      display: block;
-      margin-left: 1.5em;
-    }
-  }
-
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    position: relative;
-  }
-/*
-  .number {
-    position: absolute;
-    top: 0;
-    right: 100%;
-    margin-right: 10px;
 
     @include media(mobile) {
-      position: relative;
-      right: auto;
+      margin: 0;
+
+      .direction-rtl & {
+        margin: 0;
+      }
     }
   }
-*/
+
+  .contents-list-wrapper {
+    .direction-rtl & {
+      direction: rtl;
+      text-align: start;
+    }
+
+    .contents-list {
+      position: relative;
+      z-index: 1;
+      padding-bottom: $gutter;
+      list-style: none;
+      background: $white;
+      box-shadow: 0 20px 15px -10px $white;
+
+      li {
+        padding-top: $gutter / 4;
+        line-height: 1.3;
+      }
+
+      a {
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .contents-number {
+        float: left;
+      }
+
+      .contents-text {
+        display: block;
+        margin-left: 1.5em;
+      }
+
+      .direction-rtl & {
+        .contents-number {
+          float: right;
+        }
+
+        .contents-text {
+          margin-left: 0;
+          margin-right: 1.5em;
+        }
+      }
+    }
+  }
+
+  h3 .number,
+  h4 .number,
+  h5 .number,
+  h6 .number {
+    margin-right: 0.1em;
+
+    .direction-rtl & {
+      margin-right: 0;
+      margin-left: 0.1em;
+    }
+  }
+
   .print-meta-data {
     display: none;
   }
